fixing FAQ overlap

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -95,9 +95,6 @@
 
 .icon-button {
   padding-right: 30px !important;
-  @include mobile {
-    padding-right: 20px !important;
-  }
 }
 
 .cta-nav {
